Project LeitnerBox {
  database_type: 'PostgreSQL'
  Note: 'Leitner Box Learning System Database'
}

Table users {
  id integer [pk, increment]
  username varchar(50) [not null, unique]
  password varchar(255) [not null]
  created_at timestamp [default: `now()`]
}

Table slots {
  id integer [pk]
  name varchar(20)
  review_interval_days integer
}

Table cards {
  id integer [pk, increment]
  user_id integer [ref: > users.id]
  slot_id integer [ref: > slots.id]
  question text [not null]
  answer text [not null]
  created_at timestamp [default: `now()`]
  last_reviewed_at date
  next_review_at date
}

Table card_reviews {
  id integer [pk, increment]
  card_id integer [ref: > cards.id]
  reviewed_at timestamp [default: `now()`]
  success boolean
}
